// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defines a valid Oxlint config 1`] = `
{
  "categories": {
    "correctness": "error",
    "pedantic": "error",
    "perf": "error",
    "restriction": "error",
    "style": "error",
    "suspicious": "error",
  },
  "env": {
    "browser": true,
    "node": true,
  },
  "overrides": [
    {
      "files": [
        "**/*.d.{ts,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-empty-named-blocks": "off",
        "import/no-unassigned-import": "off",
        "import/prefer-default-export": "off",
        "import/unambiguous": "off",
        "typescript/consistent-type-definitions": "off",
        "typescript/no-empty-interface": "off",
        "typescript/no-empty-object-type": "off",
        "typescript/no-restricted-types": "off",
        "unicorn/require-module-specifiers": "off",
      },
    },
    {
      "files": [
        "**/*.test.{ts,tsx,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "eslint/no-alert": "off",
        "eslint/no-param-reassign": "off",
        "eslint/no-promise-executor-return": "off",
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "jsx-a11y/anchor-is-valid": "off",
        "jsx-a11y/click-events-have-key-events": "off",
        "jsx-a11y/mouse-events-have-key-events": "off",
        "promise/prefer-await-to-then": "off",
        "react-perf/jsx-no-new-array-as-prop": "off",
        "react/button-has-type": "off",
        "react/jsx-no-useless-fragment": "off",
        "react/no-array-index-key": "off",
        "react/no-children-prop": "off",
        "typescript/ban-ts-comment": "off",
        "typescript/no-confusing-void-expression": "off",
        "typescript/no-empty-function": "off",
        "typescript/no-extraneous-class": "off",
        "typescript/no-unsafe-argument": "off",
        "typescript/no-unsafe-assignment": "off",
        "typescript/no-unsafe-member-access": "off",
        "unicorn/consistent-function-scoping": "off",
        "unicorn/error-message": "off",
        "unicorn/no-empty-file": "off",
        "vitest/no-commented-out-tests": "warn",
        "vitest/no-disabled-tests": "warn",
      },
    },
    {
      "files": [
        "**/*.config.{ts,cts,mts}",
        "**/*.setup.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-anonymous-default-export": [
          "error",
          {
            "allowObject": true,
          },
        ],
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "unicorn/no-empty-file": "off",
      },
    },
  ],
  "plugins": [
    "eslint",
    "import",
    "jest",
    "node",
    "oxc",
    "promise",
    "typescript",
    "unicorn",
    "vitest",
  ],
  "rules": {
    "eslint/accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
      },
    ],
    "eslint/array-callback-return": [
      "error",
      {
        "allowImplicit": true,
      },
    ],
    "eslint/arrow-body-style": "off",
    "eslint/capitalized-comments": "off",
    "eslint/func-names": "off",
    "eslint/func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "eslint/grouped-accessor-pairs": [
      "error",
      "getBeforeSet",
    ],
    "eslint/id-length": "off",
    "eslint/init-declarations": "off",
    "eslint/max-depth": "off",
    "eslint/max-lines": "off",
    "eslint/max-lines-per-function": "off",
    "eslint/max-params": "off",
    "eslint/max-statements": "off",
    "eslint/new-cap": "off",
    "eslint/no-await-in-loop": "off",
    "eslint/no-continue": "off",
    "eslint/no-deprecated": "warn",
    "eslint/no-duplicate-imports": "off",
    "eslint/no-else-return": [
      "error",
      {
        "allowElseIf": false,
      },
    ],
    "eslint/no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "eslint/no-inline-comments": "off",
    "eslint/no-magic-numbers": "off",
    "eslint/no-return-assign": [
      "error",
      "always",
    ],
    "eslint/no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "eslint/no-shadow": "off",
    "eslint/no-ternary": "off",
    "eslint/no-undefined": "off",
    "eslint/no-unsafe-negation": [
      "error",
      {
        "enforceForOrderingRelations": true,
      },
    ],
    "eslint/no-unsafe-optional-chaining": [
      "error",
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "eslint/no-unused-expressions": [
      "error",
      {
        "enforceForJSX": true,
      },
    ],
    "eslint/no-unused-vars": [
      "warn",
      {
        "argsIgnorePattern": "^_",
        "caughtErrorsIgnorePattern": "^_",
        "destructuredArrayIgnorePattern": "^_",
        "varsIgnorePattern": "^_",
      },
    ],
    "eslint/no-void": "off",
    "eslint/prefer-destructuring": [
      "error",
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "eslint/prefer-promise-reject-errors": "off",
    "eslint/require-await": "off",
    "eslint/sort-imports": "off",
    "eslint/sort-keys": "off",
    "eslint/valid-typeof": [
      "error",
      {
        "requireStringLiterals": false,
      },
    ],
    "import/exports-last": "off",
    "import/group-exports": "off",
    "import/max-dependencies": "off",
    "import/no-default-export": "off",
    "import/no-named-export": "off",
    "import/no-namespace": "off",
    "import/no-nodejs-modules": "off",
    "import/no-relative-parent-imports": "off",
    "import/unambiguous": "warn",
    "node/no-process-env": "off",
    "oxc/no-async-await": "off",
    "oxc/no-optional-chaining": "off",
    "oxc/no-rest-spread-properties": "off",
    "promise/avoid-new": "off",
    "promise/prefer-await-to-callbacks": "off",
    "typescript/array-type": [
      "error",
      {
        "default": "array-simple",
        "readonly": "generic",
      },
    ],
    "typescript/ban-ts-comment": [
      "error",
      {
        "ts-check": true,
        "ts-expect-error": false,
        "ts-ignore": true,
        "ts-nocheck": true,
      },
    ],
    "typescript/consistent-type-definitions": [
      "error",
      "type",
    ],
    "typescript/consistent-type-imports": [
      "error",
      {
        "fixStyle": "separate-type-imports",
        "prefer": "type-imports",
      },
    ],
    "typescript/explicit-function-return-type": "off",
    "typescript/no-confusing-void-expression": [
      "error",
      {
        "ignoreArrowShorthand": true,
      },
    ],
    "typescript/no-empty-interface": "off",
    "typescript/no-explicit-any": "off",
    "typescript/no-misused-promises": [
      "error",
      {
        "checksConditionals": true,
        "checksVoidReturn": false,
      },
    ],
    "typescript/no-namespace": [
      "error",
      {
        "allowDeclarations": true,
      },
    ],
    "typescript/no-non-null-assertion": "off",
    "typescript/no-restricted-types": [
      "error",
      {
        "types": {
          "[]": true,
          "null": true,
          "object": true,
        },
      },
    ],
    "typescript/no-unsafe-type-assertion": "off",
    "typescript/no-use-before-define": "off",
    "typescript/only-throw-error": [
      "error",
      {
        "allowThrowingAny": false,
        "allowThrowingUnknown": true,
      },
    ],
    "typescript/prefer-nullish-coalescing": [
      "error",
      {
        "ignoreConditionalTests": false,
      },
    ],
    "typescript/prefer-promise-reject-errors": "off",
    "typescript/prefer-readonly-parameter-types": "off",
    "typescript/require-array-sort-compare": [
      "error",
      {
        "ignoreStringArrays": true,
      },
    ],
    "typescript/require-await": "warn",
    "typescript/restrict-template-expressions": [
      "error",
      {
        "allowNumber": true,
      },
    ],
    "typescript/strict-boolean-expressions": "off",
    "typescript/switch-exhaustiveness-check": [
      "error",
      {
        "allowDefaultCaseForExhaustiveSwitch": false,
        "considerDefaultExhaustiveForUnions": true,
        "requireDefaultForNonUnion": true,
      },
    ],
    "typescript/unbound-method": "off",
    "unicorn/no-array-callback-reference": "off",
    "unicorn/no-empty-file": "warn",
    "unicorn/no-null": "off",
    "unicorn/no-single-promise-in-promise-methods": "off",
    "unicorn/no-useless-undefined": "off",
    "unicorn/prefer-bigint-literals": "off",
    "unicorn/prefer-number-properties": [
      "error",
      {
        "checkInfinity": true,
        "checkNaN": true,
      },
    ],
    "unicorn/prefer-structured-clone": "off",
    "vitest/consistent-test-filename": "off",
    "vitest/consistent-test-it": "off",
    "vitest/max-expects": "off",
    "vitest/max-nested-describe": "off",
    "vitest/no-alias-methods": "off",
    "vitest/no-conditional-tests": "off",
    "vitest/no-hooks": "off",
    "vitest/no-importing-vitest-globals": "off",
    "vitest/no-large-snapshots": "off",
    "vitest/prefer-called-once": "off",
    "vitest/prefer-called-with": "off",
    "vitest/prefer-import-in-mock": "off",
    "vitest/prefer-lowercase-title": "off",
    "vitest/prefer-spy-on": "off",
    "vitest/prefer-to-be-falsy": "off",
    "vitest/prefer-to-be-truthy": "off",
    "vitest/require-hook": "off",
    "vitest/require-top-level-describe": "off",
  },
  "settings": {
    "vitest": {
      "typecheck": true,
    },
  },
}
`;

exports[`supports the \`react\` option 1`] = `
{
  "categories": {
    "correctness": "error",
    "pedantic": "error",
    "perf": "error",
    "restriction": "error",
    "style": "error",
    "suspicious": "error",
  },
  "env": {
    "browser": true,
    "node": true,
  },
  "overrides": [
    {
      "files": [
        "**/*.d.{ts,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-empty-named-blocks": "off",
        "import/no-unassigned-import": "off",
        "import/prefer-default-export": "off",
        "import/unambiguous": "off",
        "typescript/consistent-type-definitions": "off",
        "typescript/no-empty-interface": "off",
        "typescript/no-empty-object-type": "off",
        "typescript/no-restricted-types": "off",
        "unicorn/require-module-specifiers": "off",
      },
    },
    {
      "files": [
        "**/*.test.{ts,tsx,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "eslint/no-alert": "off",
        "eslint/no-param-reassign": "off",
        "eslint/no-promise-executor-return": "off",
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "jsx-a11y/anchor-is-valid": "off",
        "jsx-a11y/click-events-have-key-events": "off",
        "jsx-a11y/mouse-events-have-key-events": "off",
        "promise/prefer-await-to-then": "off",
        "react-perf/jsx-no-new-array-as-prop": "off",
        "react/button-has-type": "off",
        "react/jsx-no-useless-fragment": "off",
        "react/no-array-index-key": "off",
        "react/no-children-prop": "off",
        "typescript/ban-ts-comment": "off",
        "typescript/no-confusing-void-expression": "off",
        "typescript/no-empty-function": "off",
        "typescript/no-extraneous-class": "off",
        "typescript/no-unsafe-argument": "off",
        "typescript/no-unsafe-assignment": "off",
        "typescript/no-unsafe-member-access": "off",
        "unicorn/consistent-function-scoping": "off",
        "unicorn/error-message": "off",
        "unicorn/no-empty-file": "off",
        "vitest/no-commented-out-tests": "warn",
        "vitest/no-disabled-tests": "warn",
      },
    },
    {
      "files": [
        "**/*.config.{ts,cts,mts}",
        "**/*.setup.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-anonymous-default-export": [
          "error",
          {
            "allowObject": true,
          },
        ],
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "unicorn/no-empty-file": "off",
      },
    },
  ],
  "plugins": [
    "eslint",
    "import",
    "jest",
    "jsx-a11y",
    "node",
    "oxc",
    "promise",
    "react",
    "react-perf",
    "typescript",
    "unicorn",
    "vitest",
  ],
  "rules": {
    "eslint/accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
      },
    ],
    "eslint/array-callback-return": [
      "error",
      {
        "allowImplicit": true,
      },
    ],
    "eslint/arrow-body-style": "off",
    "eslint/capitalized-comments": "off",
    "eslint/func-names": "off",
    "eslint/func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "eslint/grouped-accessor-pairs": [
      "error",
      "getBeforeSet",
    ],
    "eslint/id-length": "off",
    "eslint/init-declarations": "off",
    "eslint/max-depth": "off",
    "eslint/max-lines": "off",
    "eslint/max-lines-per-function": "off",
    "eslint/max-params": "off",
    "eslint/max-statements": "off",
    "eslint/new-cap": "off",
    "eslint/no-await-in-loop": "off",
    "eslint/no-continue": "off",
    "eslint/no-deprecated": "warn",
    "eslint/no-duplicate-imports": "off",
    "eslint/no-else-return": [
      "error",
      {
        "allowElseIf": false,
      },
    ],
    "eslint/no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "eslint/no-inline-comments": "off",
    "eslint/no-magic-numbers": "off",
    "eslint/no-return-assign": [
      "error",
      "always",
    ],
    "eslint/no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "eslint/no-shadow": "off",
    "eslint/no-ternary": "off",
    "eslint/no-undefined": "off",
    "eslint/no-unsafe-negation": [
      "error",
      {
        "enforceForOrderingRelations": true,
      },
    ],
    "eslint/no-unsafe-optional-chaining": [
      "error",
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "eslint/no-unused-expressions": [
      "error",
      {
        "enforceForJSX": true,
      },
    ],
    "eslint/no-unused-vars": [
      "warn",
      {
        "argsIgnorePattern": "^_",
        "caughtErrorsIgnorePattern": "^_",
        "destructuredArrayIgnorePattern": "^_",
        "varsIgnorePattern": "^_",
      },
    ],
    "eslint/no-void": "off",
    "eslint/prefer-destructuring": [
      "error",
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "eslint/prefer-promise-reject-errors": "off",
    "eslint/require-await": "off",
    "eslint/sort-imports": "off",
    "eslint/sort-keys": "off",
    "eslint/valid-typeof": [
      "error",
      {
        "requireStringLiterals": false,
      },
    ],
    "import/exports-last": "off",
    "import/group-exports": "off",
    "import/max-dependencies": "off",
    "import/no-default-export": "off",
    "import/no-named-export": "off",
    "import/no-namespace": "off",
    "import/no-nodejs-modules": "off",
    "import/no-relative-parent-imports": "off",
    "import/unambiguous": "warn",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/img-redundant-alt": "off",
    "jsx-a11y/media-has-caption": "off",
    "jsx-a11y/mouse-events-have-key-events": "warn",
    "node/no-process-env": "off",
    "oxc/no-async-await": "off",
    "oxc/no-optional-chaining": "off",
    "oxc/no-rest-spread-properties": "off",
    "promise/avoid-new": "off",
    "promise/prefer-await-to-callbacks": "off",
    "react-perf/jsx-no-new-array-as-prop": "error",
    "react/button-has-type": "error",
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/jsx-curly-brace-presence": [
      "error",
      {
        "children": "never",
        "propElementValues": "always",
        "props": "never",
      },
    ],
    "react/jsx-filename-extension": [
      "error",
      {
        "extensions": [
          ".tsx",
        ],
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-no-target-blank": [
      "error",
      {
        "warnOnSpreadAttributes": true,
      },
    ],
    "react/jsx-props-no-spreading": "off",
    "react/no-array-index-key": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-direct-mutation-state": "off",
    "react/no-find-dom-node": "off",
    "react/no-is-mounted": "off",
    "react/no-multi-comp": "off",
    "react/no-redundant-should-component-update": "off",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "off",
    "react/no-this-in-sfc": "off",
    "react/no-unsafe": "off",
    "react/no-will-update-set-state": "off",
    "react/only-export-components": "off",
    "react/prefer-es6-class": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-render-return": "off",
    "react/state-in-constructor": "off",
    "react_perf/jsx-no-jsx-as-prop": "off",
    "react_perf/jsx-no-new-function-as-prop": "off",
    "react_perf/jsx-no-new-object-as-prop": "off",
    "typescript/array-type": [
      "error",
      {
        "default": "array-simple",
        "readonly": "generic",
      },
    ],
    "typescript/ban-ts-comment": [
      "error",
      {
        "ts-check": true,
        "ts-expect-error": false,
        "ts-ignore": true,
        "ts-nocheck": true,
      },
    ],
    "typescript/consistent-type-definitions": [
      "error",
      "type",
    ],
    "typescript/consistent-type-imports": [
      "error",
      {
        "fixStyle": "separate-type-imports",
        "prefer": "type-imports",
      },
    ],
    "typescript/explicit-function-return-type": "off",
    "typescript/no-confusing-void-expression": [
      "error",
      {
        "ignoreArrowShorthand": true,
      },
    ],
    "typescript/no-empty-interface": "off",
    "typescript/no-explicit-any": "off",
    "typescript/no-misused-promises": [
      "error",
      {
        "checksConditionals": true,
        "checksVoidReturn": false,
      },
    ],
    "typescript/no-namespace": [
      "error",
      {
        "allowDeclarations": true,
      },
    ],
    "typescript/no-non-null-assertion": "off",
    "typescript/no-restricted-types": [
      "error",
      {
        "types": {
          "[]": true,
          "null": true,
          "object": true,
        },
      },
    ],
    "typescript/no-unsafe-type-assertion": "off",
    "typescript/no-use-before-define": "off",
    "typescript/only-throw-error": [
      "error",
      {
        "allowThrowingAny": false,
        "allowThrowingUnknown": true,
      },
    ],
    "typescript/prefer-nullish-coalescing": [
      "error",
      {
        "ignoreConditionalTests": false,
      },
    ],
    "typescript/prefer-promise-reject-errors": "off",
    "typescript/prefer-readonly-parameter-types": "off",
    "typescript/require-array-sort-compare": [
      "error",
      {
        "ignoreStringArrays": true,
      },
    ],
    "typescript/require-await": "warn",
    "typescript/restrict-template-expressions": [
      "error",
      {
        "allowNumber": true,
      },
    ],
    "typescript/strict-boolean-expressions": "off",
    "typescript/switch-exhaustiveness-check": [
      "error",
      {
        "allowDefaultCaseForExhaustiveSwitch": false,
        "considerDefaultExhaustiveForUnions": true,
        "requireDefaultForNonUnion": true,
      },
    ],
    "typescript/unbound-method": "off",
    "unicorn/no-array-callback-reference": "off",
    "unicorn/no-empty-file": "warn",
    "unicorn/no-null": "off",
    "unicorn/no-single-promise-in-promise-methods": "off",
    "unicorn/no-useless-undefined": "off",
    "unicorn/prefer-bigint-literals": "off",
    "unicorn/prefer-number-properties": [
      "error",
      {
        "checkInfinity": true,
        "checkNaN": true,
      },
    ],
    "unicorn/prefer-structured-clone": "off",
    "vitest/consistent-test-filename": "off",
    "vitest/consistent-test-it": "off",
    "vitest/max-expects": "off",
    "vitest/max-nested-describe": "off",
    "vitest/no-alias-methods": "off",
    "vitest/no-conditional-tests": "off",
    "vitest/no-hooks": "off",
    "vitest/no-importing-vitest-globals": "off",
    "vitest/no-large-snapshots": "off",
    "vitest/prefer-called-once": "off",
    "vitest/prefer-called-with": "off",
    "vitest/prefer-import-in-mock": "off",
    "vitest/prefer-lowercase-title": "off",
    "vitest/prefer-spy-on": "off",
    "vitest/prefer-to-be-falsy": "off",
    "vitest/prefer-to-be-truthy": "off",
    "vitest/require-hook": "off",
    "vitest/require-top-level-describe": "off",
  },
  "settings": {
    "vitest": {
      "typecheck": true,
    },
  },
}
`;
